@@ -1,3 +1,5 @@
+ 2003-06-23 Al Riddoch <alriddoch@zepler.org>
+    - Update Makefile.ams so distcheck works.
  2003-05-06 Al Riddoch <alriddoch@zepler.org>
     - skstream/skstream.h, skstream/skstream.cpp, skstream_unix.h:
       Re-work basic_socket_stream so it can have either stream or datagram
